--- a/style.css
+++ b/style.css
@@ -19,3 +19,19 @@
     padding: 9px 30px;
     cursor: pointer;
 }
+.catagories h1{
+    color: white;
+}
+.cat1{
+    background-color: orange;
+}
+.cat2{
+    background-color: orchid;
+}
+.cat3{
+    background-color: blue;
+}
+.cat1, .cat2, .cat3{
+    border-radius:10px;
+
+}
